Based on Jason Beans changes, have updated the OS to Ubuntu 16.04 and MariaDB to 10.1 Fixed the 'Invalid login error' - due to the firstrun.sh not copying the auth jar files across to the extensions folder Added options to guacamole.properties (to allow dual LDAP and MYSQL)

--- a/configfiles/guacamole.properties
+++ b/configfiles/guacamole.properties
@@ -8,6 +8,12 @@ guacd-port:     4822
 ###### Properties used by BasicFileAuthenticationProvider
 #basic-user-mapping: /etc/guacamole/user-mapping.xml
 
+# MySQL user must exist in database
+mysql-user-required: true
+
+# PostgreSQL user must exist in database
+postgresql-user-required: true
+
 ### http://guacamole.incubator.apache.org/doc/gug/jdbc-auth.html#jdbc-auth-mysql
 ### MySQL properties
 mysql-hostname: 127.0.0.1
@@ -16,12 +22,14 @@ mysql-database: guacamole
 mysql-username: guacamole
 mysql-password: some_password
 
+mysql-disallow-duplicate-connections: false
+
 ### http://guacamole.incubator.apache.org/doc/gug/ldap-auth.html
 ### LDAP Properties
-#ldap-hostname:             
-#ldap-port:                 
-#ldap-user-base-dn:         
-#ldap-username-attribute:   
+ldap-hostname: ldap.server.lan
+ldap-port: 389
+ldap-user-base-dn: uid=user,ou=people,dc=example,dc=net
+ldap-username-attribute:  
 #ldap-search-bind-dn:	   
 #ldap-search-bind-password:
 #ldap-config-base-dn:
