Add MYSQL new directives since 0.9.11, remove depreceated Add LDAP group example

--- a/configfiles/guacamole.properties
+++ b/configfiles/guacamole.properties
@@ -22,14 +22,16 @@ mysql-database: guacamole
 mysql-username: guacamole
 mysql-password: some_password
 
-mysql-disallow-duplicate-connections: false
+mysql-default-max-connections-per-user: 0
+mysql-default-max-group-connections: 0
 
 ### http://guacamole.incubator.apache.org/doc/gug/ldap-auth.html
 ### LDAP Properties
 ldap-hostname: ldap.server.lan
 ldap-port: 389
 ldap-user-base-dn: uid=user,ou=people,dc=example,dc=net
-ldap-username-attribute:  
+ldap-group-base-dn: ou=group,dc=example,dc=net
+ldap-username-attribute: uid  
 #ldap-search-bind-dn:	   
 #ldap-search-bind-password:
 #ldap-config-base-dn:
